src/test/ui/consts/const-eval/ref_to_int_match.32bit.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/ref_to_int_match.rs:25:27
   |
LL | const BAR: Int = unsafe { Foo { r: &42 }.f };
   |                           ^^^^^^^^^^^^^^^^ type validation failed: encountered pointer to alloc3, but expected plain (non-pointer) bytes

error: could not evaluate constant pattern
  --> $DIR/ref_to_int_match.rs:7:14
   |
LL |         10..=BAR => {},
   |              ^^^

error: could not evaluate constant pattern
  --> $DIR/ref_to_int_match.rs:7:14
   |
LL |         10..=BAR => {},
   |              ^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0080`.
